--- a/cit/debian/control.in
+++ b/cit/debian/control.in
@@ -1,18 +1,18 @@
 Source: citus
 Section: database
 Priority: optional
-Maintainer: Citus Data <packaging@citusdata.com>
-Uploaders: Jason Petersen <jason@citusdata.com>
+Maintainer: Percona Development Team <info@percona.com>
+Uploaders: Evgeniy Patlan <evgeniy.patlan@percona.com>
 Build-Depends: debhelper (>= 9), autotools-dev, postgresql-server-dev-all (>= 158~), libedit-dev, libpam0g-dev, libselinux1-dev, libxslt1-dev, libssl-dev, libkrb5-dev, libicu-dev, libcurl4-openssl-dev | libcurl-dev
 Standards-Version: 4.2.1
 Homepage: https://github.com/citusdata/citus
 XS-Testsuite: autopkgtest
 
-Package: postgresql-PGVERSION-citus
+Package: percona-postgresql-PGVERSION-citus
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, postgresql-PGVERSION
-Provides: postgresql-PGVERSION-citus
-Conflicts: postgresql-PGVERSION-citus
+Depends: ${shlibs:Depends}, ${misc:Depends}, percona-postgresql-PGVERSION
+Provides: percona-postgresql-PGVERSION-citus
+Conflicts: percona-postgresql-PGVERSION-citus
 Description: sharding and distributed joins for PostgreSQL
  Citus is a distributed database implemented as a PostgreSQL extension. It
  provides functions to easily split a PostgreSQL table into shards to be
