--- a/cit/debian/rules
+++ b/cit/debian/rules
@@ -13,7 +13,7 @@ override_dh_auto_configure:
 	+pg_buildext configure build-%v --with-extra-version="$${CONF_EXTRA_VERSION:-}" --with-security-flags
 
 override_dh_auto_install:
-	+pg_buildext install build-%v postgresql-%v-citus
+	+pg_buildext install build-%v percona-postgresql-%v-citus
 
 %:
 	dh $@
