--- a/cit/debian/control
+++ b/cit/debian/control
@@ -7,11 +7,11 @@ Build-Depends: debhelper (>= 9), autotools-dev, postgresql-server-dev-all (>= 15
 Standards-Version: 4.2.1
 Homepage: https://github.com/citusdata/citus
 
-Package: percona-postgresql-PGVERSION-citus
+Package: percona-postgresql-15-citus
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, percona-postgresql-PGVERSION
-Provides: percona-postgresql-PGVERSION-citus
-Conflicts: percona-postgresql-PGVERSION-citus
+Depends: ${shlibs:Depends}, ${misc:Depends}, percona-postgresql-15
+Provides: percona-postgresql-15-citus
+Conflicts: percona-postgresql-15-citus
 Description: sharding and distributed joins for PostgreSQL
  Citus is a distributed database implemented as a PostgreSQL extension. It
  provides functions to easily split a PostgreSQL table into shards to be
