--- a/cit/debian/control.in
+++ b/cit/debian/control.in
@@ -1,9 +1,9 @@
-Source: citus
+Source: percona-citus-15
 Section: database
 Priority: optional
 Maintainer: Percona Development Team <info@percona.com>
 Uploaders: Evgeniy Patlan <evgeniy.patlan@percona.com>
-Build-Depends: debhelper (>= 9), autotools-dev, postgresql-server-dev-all (>= 158~), libedit-dev, libpam0g-dev, libselinux1-dev, libxslt1-dev, libssl-dev, libkrb5-dev, libicu-dev, libcurl4-openssl-dev | libcurl-dev
+Build-Depends: debhelper (>= 9), autotools-dev, percona-postgresql-server-dev-all (>= 158~), libedit-dev, libpam0g-dev, libselinux1-dev, libxslt1-dev, libssl-dev, libkrb5-dev, libicu-dev, libcurl4-openssl-dev | libcurl-dev
 Standards-Version: 4.2.1
 Homepage: https://github.com/citusdata/citus
 
