--- a/cit/debian/rules
+++ b/cit/debian/rules
@@ -2,6 +2,9 @@
 
 include /usr/share/postgresql-common/pgxs_debian_control.mk
 
+override_dh_builddeb:
+	dh_builddeb -- -Zgzip
+
 override_dh_auto_build:
 	+pg_buildext build build-%v
 
